# odoo

./: .gitignore  README.md  requirements.txt
addons/: Dircreat.cmd
addons/crm/models/: crm_lead.py
addons/crm/report/: crm_opportunity_report_views.xml
addons/crm/views/: crm_lead_views.xml
addons/crm_iap_mine/: __init__.py
addons/crm_iap_mine/controllers/: main.py
addons/crm_iap_mine/models/: crm_iap_lead_mining_request.py  iap_contact.py
addons/crm_module/: __manifest__.py
addons/crm_module/views/: crm_category.xml
addons/crm_probability_cleaner/: __init__.py  __manifest__.py
addons/crm_probability_cleaner/models/: __init__.py  ir_view_patch.py
addons/crm_probability_cleaner/views/: crm_lead_views.xml
addons/custom_crm/: __manifest__.py
addons/custom_crm/models/: __init__.py  crm_lead_extension.py
addons/custom_crm/views/: crm_lead_views.xml
addons/mrp/: __manifest__.py
addons/mrp/models/: mrp_production2.py
addons/stock_barcode/: __manifest__.py
addons/stock_barcode/models/: __init__.py  stock_barcode.py  stock_barcode_scanner.py
addons/stock_barcode/report/: stock_barcode_report.xml
addons/stock_barcode/reports/: stock_barcode_report.xml
addons/stock_barcode/views/: stock_barcode_views.xml
addons/telemarketor_dashboard/: manifest.py
addons/telemarketor_dashboard/data/: sequence_data.xml
addons/telemarketor_dashboard/models/: __init__.py  crm_campaign.py  crm_encounter.py  crm_kpi.py  crm_lead.py  crm_opportunity.py  res_partner.py
addons/telemarketor_dashboard/security/: ir.model.access.csv  security.xml
addons/telemarketor_dashboard/views/: crm_campaign_views.xml  crm_encounter_views.xml  crm_kpi_views.xml  crm_lead_views.xml  crm_opportunity_views.xml  crm_tele_map_views.xml  menu.xml  res_partner_views.xml  wizard_export_views.xml
addons/telemarketor_dashboard/wizards/: export_wizard.py
addons/warehouse_barcode_scanner/: __init__.py  __manifest__.py
addons/warehouse_barcode_scanner/controllers/: main.py
addons/warehouse_barcode_scanner/views/: stock_views.xml
custom_addons/: Create_Odoo_Module.ps1
custom_addons/account-invoicing/: .copier-answers.yml  .pre-commit-config.yaml  README.md
custom_addons/account-invoicing/account_global_discount/: README.rst
custom_addons/account-invoicing/account_invoice_customer_no_autofollow/: __manifest__.py
custom_addons/account-invoicing/account_invoice_date_due/: README.rst
custom_addons/account-invoicing/account_invoice_discount_display_amount/: README.rst  __manifest__.py
custom_addons/account-invoicing/account_invoice_mass_sending/: README.rst  __manifest__.py
custom_addons/account-invoicing/account_invoice_pricelist/: README.rst  __manifest__.py
custom_addons/account-invoicing/account_invoice_section_sale_order/: README.rst  __manifest__.py
custom_addons/account-invoicing/account_invoice_subscription_per_contact/: README.rst  __manifest__.py
custom_addons/account-invoicing/account_invoice_supplier_ref_unique/: README.rst  __manifest__.py
custom_addons/account-invoicing/account_invoice_supplierinfo_update/: README.rst  __manifest__.py
custom_addons/account-invoicing/account_move_tier_validation/: README.rst  __manifest__.py
custom_addons/amg_crm_commission/: __manifest__.py
custom_addons/amg_crm_commission/models/: __init__.py  (+5 more)
custom_addons/amg_crm_lead_scoring/: README.rst  __manifest__.py
custom_addons/amg_holiday_schedule/: __manifest__.py
custom_addons/amg_reporting_engine/: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
custom_addons/amg_reporting_engine/setup/_metapackage/: pyproject.toml
custom_addons/automation/: .copier-answers.yml  .pre-commit-config.yaml  README.md
custom_addons/coffee_management/: README.md  README.rst  __init__.py  __manifest__.py
custom_addons/coffee_manual/: Monthly_Report_Oct15_Nov5_2025.pptx  Monthly_Report_Oct15_Nov5_20252.pptx  __init__.py  __manifest__.py  oct15.pptx  ppt.py
custom_addons/competitor/: __manifest__.py
custom_addons/connector_telephony/: .copier-answers.yml  .pre-commit-config.yaml  README.md
custom_addons/crm_dashboard/: README.md  __manifest__.py
custom_addons/crm_field_cleaner/: __init__.py  __manifest__.py
custom_addons/crm_hide_tags_priority_fields/: __manifest__.py
custom_addons/crm_lead_code/: README.rst  __manifest__.py
custom_addons/crm_lead_geolocation/: __manifest__.py
custom_addons/crm_phonecall/: __manifest__.py
custom_addons/crm_phonecall_summary_predefined/: __manifest__.py
custom_addons/crm_telemarketing/: README.rst  __init__.py  __manifest__.py
custom_addons/encounter_visit/: __manifest__.py
custom_addons/kpi_management_framework/: README.md  USER_MANUAL.md  __init__.py  __manifest__.py  rdg.py
custom_addons/leaflet_map/: __manifest__.py
custom_addons/management-system/: README.md
custom_addons/manufacture/: README.md
custom_addons/market_intelligence/: __manifest__.py
custom_addons/marketing_analysis_system/: __init__.py  __manifest__.py  hooks.py
custom_addons/partner-contact/: README.md
custom_addons/product_price_log/: CRM_Leads_Consumer_Industrial.xlsx  CRM_Leads_Sample_New.xlsx  Module5_StudyNotes_with_images.py  Sample.data.py  __manifest__.py  samples.py
custom_addons/purchase-workflow/: .copier-answers.yml  .pre-commit-config.yaml  README.md
custom_addons/purchase-workflow/setup/_metapackage/: pyproject.toml
custom_addons/sale-workflow/: .copier-answers.yml  .pre-commit-config.yaml  README.md
custom_addons/server-auth/: .copier-answers.yml  .pre-commit-config.yaml  README.md
custom_addons/server-tools/: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
custom_addons/stock-logistics-warehouse/: .copier-answers.yml  .pre-commit-config.yaml  README.md
custom_addons/stock-logistics-workflow/: .copier-answers.yml  .pre-commit-config.yaml  README.md  structure.txt
custom_addons/stock-logistics-workflow/setup/_metapackage/: pyproject.toml
custom_addons/stock_barcode_scanner/: README.md
custom_addons/stock_barcode_scanner/setup/_metapackage/: pyproject.toml
(+2282 files in other folders)
