[project]
name = "odoo-addons-oca-purchase-workflow"
version = "17.0.20250718.0"
dependencies = [
    "odoo-addon-procurement_purchase_no_grouping>=17.0dev,<17.1dev",
    "odoo-addon-procurement_purchase_requisition_generation>=17.0dev,<17.1dev",
    "odoo-addon-procurement_purchase_sale_no_grouping>=17.0dev,<17.1dev",
    "odoo-addon-product_supplier_code_purchase>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_disable_autocreation>=17.0dev,<17.1dev",
    "odoo-addon-purchase_advance_payment>=17.0dev,<17.1dev",
    "odoo-addon-purchase_all_shipments>=17.0dev,<17.1dev",
    "odoo-addon-purchase_allowed_product>=17.0dev,<17.1dev",
    "odoo-addon-purchase_blanket_order>=17.0dev,<17.1dev",
    "odoo-addon-purchase_cancel_reason>=17.0dev,<17.1dev",
    "odoo-addon-purchase_commercial_partner>=17.0dev,<17.1dev",
    "odoo-addon-purchase_default_terms_conditions>=17.0dev,<17.1dev",
    "odoo-addon-purchase_delivery_split_date>=17.0dev,<17.1dev",
    "odoo-addon-purchase_deposit>=17.0dev,<17.1dev",
    "odoo-addon-purchase_exception>=17.0dev,<17.1dev",
    "odoo-addon-purchase_fop_shipping>=17.0dev,<17.1dev",
    "odoo-addon-purchase_force_invoiced>=17.0dev,<17.1dev",
    "odoo-addon-purchase_invoice_method>=17.0dev,<17.1dev",
    "odoo-addon-purchase_invoice_plan>=17.0dev,<17.1dev",
    "odoo-addon-purchase_last_price_info>=17.0dev,<17.1dev",
    "odoo-addon-purchase_location_by_line>=17.0dev,<17.1dev",
    "odoo-addon-purchase_lot>=17.0dev,<17.1dev",
    "odoo-addon-purchase_manual_currency>=17.0dev,<17.1dev",
    "odoo-addon-purchase_manual_delivery>=17.0dev,<17.1dev",
    "odoo-addon-purchase_mass_mail>=17.0dev,<17.1dev",
    "odoo-addon-purchase_no_rfq>=17.0dev,<17.1dev",
    "odoo-addon-purchase_open_qty>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_approved>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_archive>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_general_discount>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_line_deep_sort>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_line_menu>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_line_sequence>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_line_stock_available>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_product_recommendation>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_qty_change_no_recompute>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_secondary_unit>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_supplierinfo_update>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_type>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_type_dashboard>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_uninvoiced_amount>=17.0dev,<17.1dev",
    "odoo-addon-purchase_order_weight_volume>=17.0dev,<17.1dev",
    "odoo-addon-purchase_partner_incoterm>=17.0dev,<17.1dev",
    "odoo-addon-purchase_partner_selectable_option>=17.0dev,<17.1dev",
    "odoo-addon-purchase_reception_notify>=17.0dev,<17.1dev",
    "odoo-addon-purchase_request>=17.0dev,<17.1dev",
    "odoo-addon-purchase_request_department>=17.0dev,<17.1dev",
    "odoo-addon-purchase_request_tier_validation>=17.0dev,<17.1dev",
    "odoo-addon-purchase_requisition_multiple_vendor>=17.0dev,<17.1dev",
    "odoo-addon-purchase_requisition_order_remaining_qty>=17.0dev,<17.1dev",
    "odoo-addon-purchase_requisition_tier_validation>=17.0dev,<17.1dev",
    "odoo-addon-purchase_sale_link_by_origin>=17.0dev,<17.1dev",
    "odoo-addon-purchase_security>=17.0dev,<17.1dev",
    "odoo-addon-purchase_start_end_dates>=17.0dev,<17.1dev",
    "odoo-addon-purchase_stock_manual_currency>=17.0dev,<17.1dev",
    "odoo-addon-purchase_stock_packaging>=17.0dev,<17.1dev",
    "odoo-addon-purchase_stock_price_unit_sync>=17.0dev,<17.1dev",
    "odoo-addon-purchase_tag>=17.0dev,<17.1dev",
    "odoo-addon-purchase_tier_validation>=17.0dev,<17.1dev",
    "odoo-addon-purchase_v12_control_menu>=17.0dev,<17.1dev",
    "odoo-addon-purchase_warn_message>=17.0dev,<17.1dev",
    "odoo-addon-sale_purchase_force_vendor>=17.0dev,<17.1dev",
    "odoo-addon-supplier_calendar>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
