[project]
name = "odoo-addons-oca-stock-logistics-workflow"
version = "17.0.20250704.0"
dependencies = [
    "odoo-addon-delivery_procurement_group_carrier>=17.0dev,<17.1dev",
    "odoo-addon-product_cost_price_avco_sync>=17.0dev,<17.1dev",
    "odoo-addon-purchase_stock_picking_invoice_link>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_global_stock_route>=17.0dev,<17.1dev",
    "odoo-addon-sale_planned_consumed_date>=17.0dev,<17.1dev",
    "odoo-addon-stock_account_product_run_fifo_hook>=17.0dev,<17.1dev",
    "odoo-addon-stock_account_show_automatic_valuation>=17.0dev,<17.1dev",
    "odoo-addon-stock_landed_costs_priority>=17.0dev,<17.1dev",
    "odoo-addon-stock_lock_lot>=17.0dev,<17.1dev",
    "odoo-addon-stock_lot_on_hand_first>=17.0dev,<17.1dev",
    "odoo-addon-stock_lot_production_date>=17.0dev,<17.1dev",
    "odoo-addon-stock_lot_scrap>=17.0dev,<17.1dev",
    "odoo-addon-stock_move_backdating>=17.0dev,<17.1dev",
    "odoo-addon-stock_move_forced_lot>=17.0dev,<17.1dev",
    "odoo-addon-stock_move_line_reference_link>=17.0dev,<17.1dev",
    "odoo-addon-stock_move_planned_consumed_date>=17.0dev,<17.1dev",
    "odoo-addon-stock_move_quantity_product_uom>=17.0dev,<17.1dev",
    "odoo-addon-stock_no_negative>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_auto_create_lot>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_auto_create_lot_sequence>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_back2draft>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_batch_print_pickings>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_filter_lot>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_group_by_base>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_group_by_partner_by_carrier>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_invoice_link>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_kind>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_line_sequence>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_mass_action>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_origin_reference>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_origin_reference_purchase>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_origin_reference_sale>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_partner_note>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_purchase_order_link>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_return_lot>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_return_restricted_qty>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_sale_order_link>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_send_by_mail>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_show_backorder>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_show_return>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_supplier_ref>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_warn_message>=17.0dev,<17.1dev",
    "odoo-addon-stock_product_security>=17.0dev,<17.1dev",
    "odoo-addon-stock_production_lot_active>=17.0dev,<17.1dev",
    "odoo-addon-stock_push_delay>=17.0dev,<17.1dev",
    "odoo-addon-stock_putaway_hook>=17.0dev,<17.1dev",
    "odoo-addon-stock_quant_package_dimension>=17.0dev,<17.1dev",
    "odoo-addon-stock_quant_package_product_packaging>=17.0dev,<17.1dev",
    "odoo-addon-stock_restrict_by_planned_consumed_date>=17.0dev,<17.1dev",
    "odoo-addon-stock_restrict_lot>=17.0dev,<17.1dev",
    "odoo-addon-stock_scrap_tier_validation>=17.0dev,<17.1dev",
    "odoo-addon-stock_scrap_tier_validation_mrp>=17.0dev,<17.1dev",
    "odoo-addon-stock_split_picking>=17.0dev,<17.1dev",
    "odoo-addon-stock_valuation_layer_usage>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
