[project]
name = "odoo-addons-oca-stock-logistics-barcode"
version = "17.0.20250708.0"
dependencies = [
    "odoo-addon-barcodes_generator_abstract>=17.0dev,<17.1dev",
    "odoo-addon-barcodes_generator_location>=17.0dev,<17.1dev",
    "odoo-addon-barcodes_generator_product>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_product_barcode_report>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
